--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,6 +4,6 @@
    }
    stage('Compile-Package'){
     
-      def mvnHome =  tool name: 'maven-3', type: 'maven'   
+      def mvnHome =  tool name: 'MAVEN_HOME', type: 'maven'
       sh "${mvnHome}/bin/mvn package"
    }
